El Endpoint Alumno y Docente se elimino, se creo un ENUM el cual almacena 3 tipo da datos(alumno, docente y admin) y se creo el Endpoint Usuario
