# routes/web.php
@@ -17,15 +17,16 @@ Route::get('/saludos', function () {
     return view('app');
 });
 
-// Alumnos
-Route::get('/api/alumnos', 'App\Http\Controllers\AlumnoController@index');
-Route::get('/api/alumnos/{dni}', 'App\Http\Controllers\AlumnoController@obtenerAlumnoPorDni');
-Route::post('/api/alumnos/guardar', 'App\Http\Controllers\AlumnoController@guardarAlumno');
-Route::delete('/api/alumnos/eliminar/{dni}', 'App\Http\Controllers\AlumnoController@eliminarAlumnoPorDni');
+// Usuarios
+Route::get('/api/usuarios', 'App\Http\Controllers\UsuarioController@index');
+Route::get('/api/usuarios/{dni}', 'App\Http\Controllers\UsuarioController@show');
+Route::post('/api/usuarios/guardar', 'App\Http\Controllers\UsuarioController@store');
+Route::put('/api/usuarios/actualizar/{dni}', 'App\Http\Controllers\UsuarioController@update');
+Route::delete('/api/usuarios/eliminar/{dni}', 'App\Http\Controllers\UsuarioController@destroy');
 
 // Aulas
 Route::get('/api/aulas', 'App\Http\Controllers\AulaController@index');
-Route::get('/api/aulas/{id}', 'App\Http\Controllers\AulaController@obtenerAulaPorId');
+Route::get('/api/aulas/{nro}', 'App\Http\Controllers\AulaController@obtenerAulaPorId');
 Route::post('/api/aulas/guardar', 'App\Http\Controllers\AulaController@guardarAula');
-Route::delete('/api/aulas/eliminar/{id}', 'App\Http\Controllers\AulaController@eliminarAulaPorId');
+Route::delete('/api/aulas/eliminar/{nro}', 'App\Http\Controllers\AulaController@eliminarAulaPorId');
 
